--- a/public/.htaccess
+++ b/public/.htaccess
@@ -14,9 +14,9 @@
     # Redireciona todas as requisições para index.php
     RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
-RewriteCond %{HTTPS} !=on
-RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
+# RewriteCond %{HTTPS} !=on
+# RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+# RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
 
 # Adiciona headers de segurança
 <IfModule mod_headers.c>
