--- a/public/.htaccess
+++ b/public/.htaccess
@@ -36,18 +36,18 @@
 <IfModule mod_headers.c>
     Header set Content-Security-Policy "
         default-src 'self';
-        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://code.jquery.com https://cdnjs.cloudflare.com;
-        style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com;
-        img-src 'self' data: https: blob:;
-        font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net;
-        connect-src 'self';
-        frame-src 'self';
-        object-src 'none';
-        base-uri 'self';
-        form-action 'self';
-        frame-ancestors 'self';
-        upgrade-insecure-requests;
-        block-all-mixed-content"
+        # script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://code.jquery.com https://cdnjs.cloudflare.com;
+        # style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com;
+        # img-src 'self' data: https: blob:;
+        # font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net;
+        # # connect-src 'self';
+        # # frame-src 'self';
+        # # object-src 'none';
+        # # base-uri 'self';
+        # # form-action 'self';
+        # # frame-ancestors 'self';
+        # # upgrade-insecure-requests;
+        # # block-all-mixed-content"
 </IfModule>
 
 # Previne listagem de diretórios
