--- a/public/.htaccess
+++ b/public/.htaccess
@@ -34,8 +34,8 @@
 
 # Content Security Policy (CSP)
 <IfModule mod_headers.c>
-    Header set Content-Security-Policy "
-        default-src 'self';
+    # Header set Content-Security-Policy "
+        # default-src 'self';
         # script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://code.jquery.com https://cdnjs.cloudflare.com;
         # style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com;
         # img-src 'self' data: https: blob:;
