--- a/public/.htaccess
+++ b/public/.htaccess
@@ -105,7 +105,7 @@ RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 # Content Security Policy (CSP)
 <IfModule mod_headers.c>
     Header set Content-Security-Policy "
-    #     default-src 'self';
+        default-src 'self'
     #     script-src 'self' 
     #         https://cdn.jsdelivr.net 
     #         https://cdnjs.cloudflare.com 
