--- a/public/.htaccess
+++ b/public/.htaccess
@@ -91,13 +91,15 @@ AddType application/javascript .js
     AddType application/javascript .js
 </IfModule>
 
-# Força HTTPS - redirecionamento em duas etapas
+# Força HTTPS - regra mais rigorosa
 RewriteEngine On
-# Primeiro redireciona para o mesmo host em HTTPS
+RewriteCond %{SERVER_PORT} !^443$
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+# Garante que www seja removido e HTTPS seja usado
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC,OR]
 RewriteCond %{HTTPS} off
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
-# Depois remove www se presente
-RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+RewriteCond %{HTTP_HOST} ^(?:www\.)?(.+)$ [NC]
 RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301,NE]
 
 # Content Security Policy (CSP)
