--- a/public/.htaccess
+++ b/public/.htaccess
@@ -91,11 +91,12 @@ AddType application/javascript .js
     AddType application/javascript .js
 </IfModule>
 
-# Força HTTPS - versão simplificada
-RewriteEngine On
-RewriteCond %{HTTPS} off
-RewriteCond %{HTTP:X-Forwarded-Proto} !https
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+# Força HTTPS - exemplo da documentação oficial
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteCond %{HTTPS} !=on
+    RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R=301,L]
+</IfModule>
 
 # Content Security Policy (CSP)
 <IfModule mod_headers.c>
@@ -106,9 +107,6 @@ RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
     Header set X-XSS-Protection "1; mode=block"
     Header set Referrer-Policy "strict-origin-when-cross-origin"
 </IfModule>
-
-# Adiciona MIME type para webmanifest
-AddType application/manifest+json .webmanifest
 
 # Resto das suas regras de rewrite atuais...
 
